--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "asgalex/yii2-evercookie",
+    "name": "vasiljok/yii2-evercookie",
     "description": "Simple evercookie component and widget for Yii2",
     "keywords": ["yii2", "evercookie", "cookie"],
     "type": "yii2-extension",
     "support": {
-        "issues": "https://github.com/ASGAlex/yii2-evercookie/issues",
-        "source": "https://github.com/ASGAlex/yii2-evercookie/"
+        "issues": "https://github.com/vasiljok/yii2-evercookie/issues",
+        "source": "https://github.com/vasiljok/yii2-evercookie/"
     },
     "authors": [
         {
