--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
+        "yiisoft/yii2": "^2.0.13",
         "lagman/evercookie": "dev-master"
     },
     "autoload": {
